service-load.yml
apiVersion: v1
kind: Service
metadata:
  name: motd-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
