service.yml
apiVersion: v1
kind: Service
metadata:
  name: motd-service
spec:
  type: ClusterIP
  selector:
    app: motd
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
