ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: theo-husson.amnay.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motd-clusterip-service
            port:
              number: 80
